src/yang/parser/y.output

state 0
	$accept: .module $end 

	kywd_module  shift 3
	.  error

	module  goto 1
	module_def  goto 2

state 1
	$accept:  module.$end 

	$end  accept
	.  error


state 2
	module:  module_def.module_stmts revision_stmt module_body_stmts token_curly_close 

	kywd_namespace  shift 6
	kywd_description  shift 9
	kywd_prefix  shift 8
	.  error

	module_stmts  goto 4
	description  goto 7
	module_stmt  goto 5

state 3
	module_def:  kywd_module.token_ident token_curly_open 

	token_ident  shift 10
	.  error


state 4
	module:  module_def module_stmts.revision_stmt module_body_stmts token_curly_close 
	module_stmts:  module_stmts.module_stmt token_semi 

	kywd_namespace  shift 6
	kywd_description  shift 9
	kywd_revision  shift 14
	kywd_prefix  shift 8
	.  error

	revision_stmt  goto 11
	revision_def  goto 13
	description  goto 7
	module_stmt  goto 12

state 5
	module_stmts:  module_stmt.token_semi 

	token_semi  shift 15
	.  error


state 6
	module_stmt:  kywd_namespace.token_string 

	token_string  shift 16
	.  error


state 7
	module_stmt:  description.    (10)

	.  reduce 10 (src line 146)


state 8
	module_stmt:  kywd_prefix.token_string 

	token_string  shift 17
	.  error


state 9
	description:  kywd_description.token_string 

	token_string  shift 18
	.  error


state 10
	module_def:  kywd_module token_ident.token_curly_open 

	token_curly_open  shift 19
	.  error


state 11
	module:  module_def module_stmts revision_stmt.module_body_stmts token_curly_close 

	kywd_uses  shift 45
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_rpc  shift 39
	kywd_notification  shift 40
	kywd_typedef  shift 37
	kywd_grouping  shift 38
	kywd_leaf  shift 49
	kywd_leaf_list  shift 50
	kywd_choice  shift 51
	.  error

	module_body_stmts  goto 20
	module_body_stmt  goto 21
	typedef_stmt  goto 22
	grouping_stmt  goto 23
	rpc_stmt  goto 24
	notification_stmt  goto 25
	body_stmt  goto 26
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	typedef_def  goto 27
	container_def  goto 42
	rpc_def  goto 29
	notification_def  goto 30
	grouping_def  goto 28
	list_def  goto 41
	leaf_def  goto 43
	leaf_list_def  goto 44

state 12
	module_stmts:  module_stmts module_stmt.token_semi 

	token_semi  shift 52
	.  error


state 13
	revision_stmt:  revision_def.token_semi 
	revision_stmt:  revision_def.token_curly_open description token_semi token_curly_close 

	token_curly_open  shift 54
	token_semi  shift 53
	.  error


state 14
	revision_def:  kywd_revision.token_rev_ident 

	token_rev_ident  shift 55
	.  error


state 15
	module_stmts:  module_stmt token_semi.    (7)

	.  reduce 7 (src line 136)


state 16
	module_stmt:  kywd_namespace token_string.    (9)

	.  reduce 9 (src line 141)


state 17
	module_stmt:  kywd_prefix token_string.    (11)

	.  reduce 11 (src line 147)


state 18
	description:  kywd_description token_string.    (6)

	.  reduce 6 (src line 132)


state 19
	module_def:  kywd_module token_ident token_curly_open.    (2)

	.  reduce 2 (src line 110)


state 20
	module:  module_def module_stmts revision_stmt module_body_stmts.token_curly_close 
	module_body_stmts:  module_body_stmts.module_body_stmt 

	token_curly_close  shift 56
	kywd_uses  shift 45
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_rpc  shift 39
	kywd_notification  shift 40
	kywd_typedef  shift 37
	kywd_grouping  shift 38
	kywd_leaf  shift 49
	kywd_leaf_list  shift 50
	kywd_choice  shift 51
	.  error

	module_body_stmt  goto 57
	typedef_stmt  goto 22
	grouping_stmt  goto 23
	rpc_stmt  goto 24
	notification_stmt  goto 25
	body_stmt  goto 26
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	typedef_def  goto 27
	container_def  goto 42
	rpc_def  goto 29
	notification_def  goto 30
	grouping_def  goto 28
	list_def  goto 41
	leaf_def  goto 43
	leaf_list_def  goto 44

state 21
	module_body_stmts:  module_body_stmt.    (17)

	.  reduce 17 (src line 159)


state 22
	module_body_stmt:  typedef_stmt.    (12)

	.  reduce 12 (src line 152)


state 23
	module_body_stmt:  grouping_stmt.    (13)

	.  reduce 13 (src line 154)


state 24
	module_body_stmt:  rpc_stmt.    (14)

	.  reduce 14 (src line 155)


state 25
	module_body_stmt:  notification_stmt.    (15)

	.  reduce 15 (src line 156)


state 26
	module_body_stmt:  body_stmt.    (16)

	.  reduce 16 (src line 157)


state 27
	typedef_stmt:  typedef_def.token_curly_open typedef_stmt_body token_curly_close 

	token_curly_open  shift 58
	.  error


state 28
	grouping_stmt:  grouping_def.grouping_body_defined 

	token_curly_open  shift 60
	.  error

	grouping_body_defined  goto 59

state 29
	rpc_stmt:  rpc_def.token_curly_open rpc_body_stmts token_curly_close 

	token_curly_open  shift 61
	.  error


state 30
	notification_stmt:  notification_def.token_curly_open notification_body_stmts token_curly_close 

	token_curly_open  shift 62
	.  error


state 31
	body_stmt:  list_stmt.    (21)

	.  reduce 21 (src line 167)


state 32
	body_stmt:  container_stmt.    (22)

	.  reduce 22 (src line 169)


state 33
	body_stmt:  leaf_stmt.    (23)

	.  reduce 23 (src line 170)


state 34
	body_stmt:  leaf_list_stmt.    (24)

	.  reduce 24 (src line 171)


state 35
	body_stmt:  uses_stmt.    (25)

	.  reduce 25 (src line 172)


state 36
	body_stmt:  choice_stmt.    (26)

	.  reduce 26 (src line 173)


state 37
	typedef_def:  kywd_typedef.token_ident 

	token_ident  shift 63
	.  error


state 38
	grouping_def:  kywd_grouping.token_ident 

	token_ident  shift 64
	.  error


state 39
	rpc_def:  kywd_rpc.token_ident 

	token_ident  shift 65
	.  error


state 40
	notification_def:  kywd_notification.token_ident 

	token_ident  shift 66
	.  error


state 41
	list_stmt:  list_def.token_curly_open list_body_stmts token_curly_close 

	token_curly_open  shift 67
	.  error


state 42
	container_stmt:  container_def.token_curly_open container_body_stmts token_curly_close 

	token_curly_open  shift 68
	.  error


state 43
	leaf_stmt:  leaf_def.token_curly_open leaf_body_stmts token_curly_close 

	token_curly_open  shift 69
	.  error


state 44
	leaf_list_stmt:  leaf_list_def.token_curly_open leaf_body_stmts token_curly_close 

	token_curly_open  shift 70
	.  error


state 45
	uses_stmt:  kywd_uses.token_ident token_semi 

	token_ident  shift 71
	.  error


state 46
	choice_stmt:  choice_def.token_curly_open choice_stmt_body token_curly_close 

	token_curly_open  shift 72
	.  error


state 47
	list_def:  kywd_list.token_ident 

	token_ident  shift 73
	.  error


state 48
	container_def:  kywd_container.token_ident 

	token_ident  shift 74
	.  error


state 49
	leaf_def:  kywd_leaf.token_ident 

	token_ident  shift 75
	.  error


state 50
	leaf_list_def:  kywd_leaf_list.token_ident 

	token_ident  shift 76
	.  error


state 51
	choice_def:  kywd_choice.token_ident 

	token_ident  shift 77
	.  error


state 52
	module_stmts:  module_stmts module_stmt token_semi.    (8)

	.  reduce 8 (src line 138)


state 53
	revision_stmt:  revision_def token_semi.    (4)

	.  reduce 4 (src line 124)


state 54
	revision_stmt:  revision_def token_curly_open.description token_semi token_curly_close 

	kywd_description  shift 9
	.  error

	description  goto 78

state 55
	revision_def:  kywd_revision token_rev_ident.    (3)

	.  reduce 3 (src line 116)


state 56
	module:  module_def module_stmts revision_stmt module_body_stmts token_curly_close.    (1)

	.  reduce 1 (src line 103)


state 57
	module_body_stmts:  module_body_stmts module_body_stmt.    (18)

	.  reduce 18 (src line 161)


state 58
	typedef_stmt:  typedef_def token_curly_open.typedef_stmt_body token_curly_close 

	kywd_description  shift 9
	kywd_type  shift 84
	kywd_default  shift 83
	.  error

	description  goto 82
	typedef_stmt_body  goto 79
	typedef_stmt_body_stmt  goto 80
	type_stmt  goto 81

state 59
	grouping_stmt:  grouping_def grouping_body_defined.    (75)

	.  reduce 75 (src line 358)


state 60
	grouping_body_defined:  token_curly_open.grouping_body_stmts token_curly_close 

	kywd_description  shift 9
	kywd_uses  shift 45
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_leaf  shift 49
	kywd_reference  shift 90
	kywd_leaf_list  shift 50
	kywd_choice  shift 51
	.  error

	description  goto 87
	body_stmt  goto 89
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	container_def  goto 42
	reference_stmt  goto 88
	grouping_body_stmts  goto 85
	grouping_body_stmt  goto 86
	list_def  goto 41
	leaf_def  goto 43
	leaf_list_def  goto 44

state 61
	rpc_stmt:  rpc_def token_curly_open.rpc_body_stmts token_curly_close 

	kywd_description  shift 9
	kywd_input  shift 97
	kywd_output  shift 98
	kywd_reference  shift 90
	.  error

	description  goto 93
	rpc_body_stmts  goto 91
	rpc_body_stmt  goto 92
	reference_stmt  goto 94
	rpc_input  goto 95
	rpc_output  goto 96

state 62
	notification_stmt:  notification_def token_curly_open.notification_body_stmts token_curly_close 

	kywd_description  shift 9
	kywd_config  shift 102
	kywd_uses  shift 45
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_leaf  shift 49
	kywd_leaf_list  shift 50
	kywd_choice  shift 51
	.  error

	description  goto 101
	body_stmt  goto 103
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	container_def  goto 42
	notification_body_stmts  goto 99
	notification_body_stmt  goto 100
	list_def  goto 41
	leaf_def  goto 43
	leaf_list_def  goto 44

state 63
	typedef_def:  kywd_typedef token_ident.    (39)

	.  reduce 39 (src line 226)


state 64
	grouping_def:  kywd_grouping token_ident.    (77)

	.  reduce 77 (src line 371)


state 65
	rpc_def:  kywd_rpc token_ident.    (59)

	.  reduce 59 (src line 300)


state 66
	notification_def:  kywd_notification token_ident.    (69)

	.  reduce 69 (src line 343)


state 67
	list_stmt:  list_def token_curly_open.list_body_stmts token_curly_close 

	kywd_description  shift 9
	kywd_key  shift 109
	kywd_config  shift 108
	kywd_uses  shift 45
	kywd_unique  shift 110
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_leaf  shift 49
	kywd_leaf_list  shift 50
	kywd_max_elements  shift 107
	kywd_choice  shift 51
	.  error

	description  goto 106
	body_stmt  goto 111
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	container_def  goto 42
	list_def  goto 41
	list_body_stmts  goto 104
	list_body_stmt  goto 105
	leaf_def  goto 43
	leaf_list_def  goto 44

state 68
	container_stmt:  container_def token_curly_open.container_body_stmts token_curly_close 

	kywd_description  shift 9
	kywd_config  shift 115
	kywd_uses  shift 45
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_leaf  shift 49
	kywd_leaf_list  shift 50
	kywd_choice  shift 51
	.  error

	description  goto 114
	body_stmt  goto 116
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	container_def  goto 42
	container_body_stmts  goto 112
	container_body_stmt  goto 113
	list_def  goto 41
	leaf_def  goto 43
	leaf_list_def  goto 44

state 69
	leaf_stmt:  leaf_def token_curly_open.leaf_body_stmts token_curly_close 

	kywd_description  shift 9
	kywd_type  shift 84
	kywd_default  shift 122
	kywd_config  shift 121
	kywd_mandatory  shift 123
	.  error

	description  goto 120
	type_stmt  goto 119
	leaf_body_stmts  goto 117
	leaf_body_stmt  goto 118

state 70
	leaf_list_stmt:  leaf_list_def token_curly_open.leaf_body_stmts token_curly_close 

	kywd_description  shift 9
	kywd_type  shift 84
	kywd_default  shift 122
	kywd_config  shift 121
	kywd_mandatory  shift 123
	.  error

	description  goto 120
	type_stmt  goto 119
	leaf_body_stmts  goto 124
	leaf_body_stmt  goto 118

state 71
	uses_stmt:  kywd_uses token_ident.token_semi 

	token_semi  shift 125
	.  error


state 72
	choice_stmt:  choice_def token_curly_open.choice_stmt_body token_curly_close 
	choice_stmt_body: .    (30)

	kywd_description  shift 9
	kywd_case  shift 131
	.  reduce 30 (src line 188)

	description  goto 127
	choice_stmt_body  goto 126
	case_stmts  goto 128
	case_stmt  goto 129
	case_def  goto 130

state 73
	list_def:  kywd_list token_ident.    (84)

	.  reduce 84 (src line 394)


state 74
	container_def:  kywd_container token_ident.    (51)

	.  reduce 51 (src line 267)


state 75
	leaf_def:  kywd_leaf token_ident.    (94)

	.  reduce 94 (src line 421)


state 76
	leaf_list_def:  kywd_leaf_list token_ident.    (103)

	.  reduce 103 (src line 449)


state 77
	choice_def:  kywd_choice token_ident.    (33)

	.  reduce 33 (src line 193)


state 78
	revision_stmt:  revision_def token_curly_open description.token_semi token_curly_close 

	token_semi  shift 132
	.  error


state 79
	typedef_stmt:  typedef_def token_curly_open typedef_stmt_body.token_curly_close 
	typedef_stmt_body:  typedef_stmt_body.typedef_stmt_body_stmt 

	token_curly_close  shift 133
	kywd_description  shift 9
	kywd_type  shift 84
	kywd_default  shift 83
	.  error

	description  goto 82
	typedef_stmt_body_stmt  goto 134
	type_stmt  goto 81

state 80
	typedef_stmt_body:  typedef_stmt_body_stmt.    (40)

	.  reduce 40 (src line 231)


state 81
	typedef_stmt_body_stmt:  type_stmt.    (42)

	.  reduce 42 (src line 236)


state 82
	typedef_stmt_body_stmt:  description.token_semi 

	token_semi  shift 135
	.  error


state 83
	typedef_stmt_body_stmt:  kywd_default.token_string token_semi 

	token_string  shift 136
	.  error


state 84
	type_stmt:  kywd_type.token_ident type_stmt_body 

	token_ident  shift 137
	.  error


state 85
	grouping_body_defined:  token_curly_open grouping_body_stmts.token_curly_close 
	grouping_body_stmts:  grouping_body_stmts.grouping_body_stmt 

	token_curly_close  shift 138
	kywd_description  shift 9
	kywd_uses  shift 45
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_leaf  shift 49
	kywd_reference  shift 90
	kywd_leaf_list  shift 50
	kywd_choice  shift 51
	.  error

	description  goto 87
	body_stmt  goto 89
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	container_def  goto 42
	reference_stmt  goto 88
	grouping_body_stmt  goto 139
	list_def  goto 41
	leaf_def  goto 43
	leaf_list_def  goto 44

state 86
	grouping_body_stmts:  grouping_body_stmt.    (78)

	.  reduce 78 (src line 376)


state 87
	grouping_body_stmt:  description.token_semi 

	token_semi  shift 140
	.  error


state 88
	grouping_body_stmt:  reference_stmt.    (81)

	.  reduce 81 (src line 382)


state 89
	grouping_body_stmt:  body_stmt.    (82)

	.  reduce 82 (src line 383)


state 90
	reference_stmt:  kywd_reference.token_string token_semi 

	token_string  shift 141
	.  error


state 91
	rpc_stmt:  rpc_def token_curly_open rpc_body_stmts.token_curly_close 
	rpc_body_stmts:  rpc_body_stmts.rpc_body_stmt 

	token_curly_close  shift 142
	kywd_description  shift 9
	kywd_input  shift 97
	kywd_output  shift 98
	kywd_reference  shift 90
	.  error

	description  goto 93
	rpc_body_stmt  goto 143
	reference_stmt  goto 94
	rpc_input  goto 95
	rpc_output  goto 96

state 92
	rpc_body_stmts:  rpc_body_stmt.    (60)

	.  reduce 60 (src line 305)


state 93
	rpc_body_stmt:  description.token_semi 

	token_semi  shift 144
	.  error


state 94
	rpc_body_stmt:  reference_stmt.    (63)

	.  reduce 63 (src line 311)


state 95
	rpc_body_stmt:  rpc_input.optional_body_stmts token_curly_close 
	optional_body_stmts: .    (19)

	kywd_uses  shift 45
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_leaf  shift 49
	kywd_leaf_list  shift 50
	kywd_choice  shift 51
	.  reduce 19 (src line 163)

	body_stmt  goto 147
	optional_body_stmts  goto 145
	body_stmts  goto 146
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	container_def  goto 42
	list_def  goto 41
	leaf_def  goto 43
	leaf_list_def  goto 44

state 96
	rpc_body_stmt:  rpc_output.optional_body_stmts token_curly_close 
	optional_body_stmts: .    (19)

	kywd_uses  shift 45
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_leaf  shift 49
	kywd_leaf_list  shift 50
	kywd_choice  shift 51
	.  reduce 19 (src line 163)

	body_stmt  goto 147
	optional_body_stmts  goto 148
	body_stmts  goto 146
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	container_def  goto 42
	list_def  goto 41
	leaf_def  goto 43
	leaf_list_def  goto 44

state 97
	rpc_input:  kywd_input.token_curly_open 

	token_curly_open  shift 149
	.  error


state 98
	rpc_output:  kywd_output.token_curly_open 

	token_curly_open  shift 150
	.  error


state 99
	notification_stmt:  notification_def token_curly_open notification_body_stmts.token_curly_close 
	notification_body_stmts:  notification_body_stmts.notification_body_stmt 

	token_curly_close  shift 151
	kywd_description  shift 9
	kywd_config  shift 102
	kywd_uses  shift 45
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_leaf  shift 49
	kywd_leaf_list  shift 50
	kywd_choice  shift 51
	.  error

	description  goto 101
	body_stmt  goto 103
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	container_def  goto 42
	notification_body_stmt  goto 152
	list_def  goto 41
	leaf_def  goto 43
	leaf_list_def  goto 44

state 100
	notification_body_stmts:  notification_body_stmt.    (70)

	.  reduce 70 (src line 348)


state 101
	notification_body_stmt:  description.token_semi 

	token_semi  shift 153
	.  error


state 102
	notification_body_stmt:  kywd_config.token_string token_semi 

	token_string  shift 154
	.  error


state 103
	notification_body_stmt:  body_stmt.    (74)

	.  reduce 74 (src line 356)


state 104
	list_stmt:  list_def token_curly_open list_body_stmts.token_curly_close 
	list_body_stmts:  list_body_stmts.list_body_stmt 

	token_curly_close  shift 155
	kywd_description  shift 9
	kywd_key  shift 109
	kywd_config  shift 108
	kywd_uses  shift 45
	kywd_unique  shift 110
	kywd_container  shift 48
	kywd_list  shift 47
	kywd_leaf  shift 49
	kywd_leaf_list  shift 50
	kywd_max_elements  shift 107
	kywd_choice  shift 51
	.  error

	description  goto 106
	body_stmt  goto 111
	list_stmt  goto 31
	container_stmt  goto 32
	leaf_stmt  goto 33
	leaf_list_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	choice_def  goto 46
	container_def  goto 42
	list_def  goto 41
	list_body_stmt  goto 156
	leaf_def  goto 43
	leaf_list_def  goto 44

state 105
	list_body_stmts:  list_body_stmt.    (85)

	.  reduce 85 (src line 399)


state 106
	list_body_stmt:  description.token_semi 

	token_semi  shift 157
	.  error


state 107
	list_body_stmt:  kywd_max_elements.token_int token_semi 

	token_int  shift 158
	.  error

